tests/error/linear_errors/unused_expr.err
Error: Drop violation (at $FILE:9:4)
  | 
7 | @guppy
8 | def foo(q: qubit @owned) -> None:
9 |     h(q)
  |     ^^^^ Expression with non-droppable type `qubit` is leaked

Help: Consider assigning this value to a local variable

Guppy compilation failed due to 1 previous error
